sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:16: error: not found: value v
    v = getValue(i);
    ^AlgInsertionSort:18: error: not found: value v
    while(getValue(i-j)>v){
                        ^AlgInsertionSort:21: error: not found: value v
    setValue(i-j, v);
                  ^